JGlideMon ChangeLog

Version 0.13
------------
- Sending chat is now at the bottom of the Chat tab and
  the Keys tab has been removed.
- Now when keys are sent, /stopglide is sent first, followed
  by the keys, followed by /startglide (if Glider was already
  running). This is also reflected in PHPGlideMon. This should
  help with /queuekeys not always sending the keys.
- Added the use of the "/escapehi on" command. Special characters
  should now be seen in the logs. Note that you won't be able
  to send the special characters, but you can at least see them.
  This means you cannot whisper people with special characters
  in their name. This is a limitation of Glider's remote interface
  as far as I can tell.

Version 0.12
------------
- Added Public Chat tab to the Chat tab that contains only
  chat from the public channels (i.e. General/Trade).
- Added ability to parse Glider chat and combat log files.
  Accessed via File->Parse Log File. After you select a file
  from the file chooser, it will automatically select Chat or
  Combat as the log type if the file name contains the word 
  Chat or Combat. If the log file is named something else,
  you will need to manually select the correct type. Note 
  that the timestamps are only accurate to the minute, since
  this is how they are stored when Glider makes the log files.
  Also, the estimated gold/hour on the loot tab wil not be
  accurate since that is calculated in realtime.
- Moved the Load Profiles section into its own tab.
- Made the Configuration dialog more consistent.
- Completely revamped the web server. Added an update
  interval option on the Web tab in the Confiuration dialog.
  Additionally, I have merged my PHP based monitor (now PHPGlideMon)
  with this project.

Version 0.11
------------
- Added an embedded webserver. It is disabled by default. See
  the Web tab in the configuration dialog to enable it. The
  default port is 3201; visit http://localhost:3201 to view it.