@@ -8,12 +8,16 @@ Version 0.13
   by the keys, followed by /startglide (if Glider was already
   running). This is also reflected in PHPGlideMon. This should
   help with /queuekeys not always sending the keys.
+- Added Reply and Guild options for sending chat.
 - Added the use of the "/escapehi on" command. Special characters
   should now be seen in the logs. Note that you won't be able
   to send the special characters, but you can at least see them.
   This means you cannot whisper people with special characters
-  in their name. This is a limitation of Glider's remote interface
-  as far as I can tell.
+  in their name directly. This is a limitation of Glider's remote
+  interface as far as I can tell. You can send a reply message 
+  instead of a regular whisper if they were the last person to
+  whisper you.
+- Log lines are now color coded by type.
 
 Version 0.12
 ------------
